Improve ImageCapture documentation

Add some missing docs to the QML ImageCapture element

Fixes: QTBUG-96705
Pick-to: 6.2 6.2.0
Change-Id: I20e14a6be03c2adafb3724287c7b82b1e05dceef
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>